--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,20 @@
     <string name="turkcepop">Türkçe Pop</string>
     <string name="halkmuzigi">Halk Müziği</string>
     <string name="gonder">Gönder</string>
+
+    <string name="action_leave">Ayrılmak</string>
+    <string name="action_send">Gönder</string>
+    <string name="prompt_message">Mesaj</string>
+
+    <string name="error_connect">Bağlantı koptu</string>
+
+    <!-- messages -->
+    <string name="message_welcome">Chat Uygulamasına Hoşgeldiniz –</string>
+    <plurals name="message_participants">
+        <item quantity="one">there\'s %d participant</item>
+        <item quantity="other">Katılımcıların sayısı: %d</item>
+    </plurals>
+    <string name="message_user_joined">%s katıldı</string>
+    <string name="message_user_left">%s ayrıldı</string>
+    <string name="user_action_typing">yazıyor</string>
 </resources>
