Arama kısmı ve buton değişiklikleri
Tasarım ile ilgili değişiklikler yapıldı.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="turkcepop">Türkçe Pop</string>
     <string name="halkmuzigi">Halk Müziği</string>
     <string name="gonder">Gönder</string>
+    <string name="populer">Popüler</string>
 
     <string name="action_leave">Ayrılmak</string>
     <string name="action_send">Gönder</string>
