Radyo baloncuğu widgetı eklendi.
Bu baloncukla radyo arka planda çalabilir(servis sınıfı sayesinde) durdurulabilir. Bir sonraki radyo veya bir önceki radyoya geçebilirsiniz uygulamayı açabilir veya kapatabilirsinizde. Uygulamada ki bugları bir sonraki paylaşımımda düzelticem.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,13 @@
     <string name="halkmuzigi">Halk Müziği</string>
     <string name="gonder">Gönder</string>
     <string name="populer">Popüler</string>
-
+	
+	<string name="action_settings">Settings</string>
+	
     <string name="action_leave">Ayrılmak</string>
     <string name="action_send">Gönder</string>
     <string name="prompt_message">Mesaj</string>
-
+		
     <string name="error_connect">Bağlantı koptu</string>
 
     <!-- messages -->
