--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="halkmuzigi">Halk Müziği</string>
     <string name="gonder">Gönder</string>
     <string name="populer">Popüler</string>
+    <string name="radyoAd">Radyo Adı</string>
 	
 	<string name="action_settings">Settings</string>
 	
