Ekran Görüntüleri ve Apk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Stereo</string>
+    <string name="app_name">SocialStream</string>
 
     <string name="action_settings">Settings</string>
 
